--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+TIMES=2
 intracting=हमेशा की तरह अच्छा पूछने के लिए धन्यवाद।
 Bye_message=आपका स्वागत है, जल्द ही फिर मिलेंगे!
 options=मुझे माफ़ करें, ये इन्फोर्मेशन मेरे पास नही है
